Add Suno Video Workflow and Video List Component
- Created a new workflow for generating videos using Suno API, Cloudflare, and Vercel APIs.
- Implemented a video list component to display, search, and manage videos.
- Added functionality for creating, deleting, and refreshing video lists.
- Integrated music generation, visual generation, and lyrics generation into the workflow.
- Included error handling and loading states in the video list component.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "northflank-deployment",
   "version": "1.0.0",
+  "type": "module",
   "description": "Northflank deployment automation for shirt-video-maker",
   "scripts": {
     "deploy": "node scripts/deploy.js",
